force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/Review_Task__c.object-meta.xml
<CustomObject>
    <label>Review Task</label>
    <pluralLabel>Review Tasks</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Task Number</label>
        <displayFormat>RT-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>