force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/APD_Application__c.field-meta.xml
<CustomField>
    <fullName>APD_Application__c</fullName>
    <description>Parent APD Application</description>
    <label>APD Application</label>
    <referenceTo>APD_Application__c</referenceTo>
    <relationshipLabel>Review Tasks</relationshipLabel>
    <relationshipName>Review_Tasks</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>