force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Review Tasks</relationshipLabel>
    <relationshipName>User_Review_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>