force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>