force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/Is_Parallel__c.field-meta.xml
<CustomField>
    <fullName>Is_Parallel__c</fullName>
    <label>Is Parallel</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>