force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <label>SLA (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>