force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/Specialist_Role__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Role__c</fullName>
    <label>Specialist Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air_Noise_Specialist</fullName>
                <label>Air/Noise Specialist</label>
            </value>
            <value>
                <fullName>Cultural_Resource_Specialist</fullName>
                <label>Cultural Resource Specialist</label>
            </value>
            <value>
                <fullName>NEPA_Coordinator</fullName>
                <label>NEPA Coordinator</label>
            </value>
            <value>
                <fullName>NPS_Coordinator</fullName>
                <label>NPS Coordinator</label>
            </value>
            <value>
                <fullName>Petroleum_Engineer</fullName>
                <label>Petroleum Engineer</label>
            </value>
            <value>
                <fullName>Wildlife_Biologist</fullName>
                <label>Wildlife Biologist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>