force-app/main/Government_Documents/Permit_And_Licensing/objects/Review_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Environmental Review</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Manager Approval</fullName>
            </value>
            <value>
                <fullName>Technical Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>